abstract base class for user